--- a/NEWS
+++ b/NEWS
@@ -1,11 +1,46 @@
-GTK-Doc 1.26  (Aug 11 2017)
+GTK-Doc 1.27  (Dec 07 2017)
 ==============
+
+Finetune the python port.
+
+ Changes
+
+ o 773879 : scangobj: Do not generate unused parameters
+ o 786174 : Several test failures on Arch Linux
+ o 787495 : gtkdoc-fixxref crashes when running vim for syntax highlighting
+ o 787768 : Aborts when glib2.0-dev is not installed
+ o 787862 : Always open files in text mode and always use utf-8
+ o 788473 : fixxref crashes if a .devhelp2.gz file is found
+ o 789531 : Don't depend on the system shell
+ o 790022 : mkdb: Add support for (not optional) annotation
+ o 791131 : gtk-doc and python3: fixxref failures
+
+ Contributors
+
+ Alban Browaeys
+ Anders Jonsson
+ Christian Kirbach
+ Christoph Reiter
+ Daniel Mustieles
+ gkrithi8
+ Jan Alexander Steffens (heftig)
+ Marek Cernocky
+ Michael Catanzaro
+ Pavel Grunt
+ Philip Withnall
+ Rafael Fontenelle
+ Simon McVittie
+ Stefan Sauer
+ Will Thompson
+
+GTK-Doc 1.26  (Aug 11 2017)
+============
 
 Remove tmpl support (gtkdoc-mktmpl). Port all tools from bash/perl to python.
 
  Changes
 
- o 773879 :  &ndash;  &nbsp; scangobj: Do not generate unused parameters
+ o 773879 : scangobj: Do not generate unused parameters
  o 780789 : Convert gtkdoc-scan from Perl to Python
  o 752126 : Add support for inline program documentation
  o 753052 : _() causes element a: validity error : ID idx already defined
@@ -14,8 +49,8 @@ Remove tmpl support (gtkdoc-mktmpl). Port all tools from bash/perl to python.
  o 764543 : /usr/bin/gtkdoc-mkpdf always exits with an error
  o 768675 : make check fails on master
  o 769125 : gtkdoc-mkhtml/pdf fails on spaces in search path
- o 769341 : gtkdoc-mkdb line 3966 triggers &quot; Negative repeat count does nothing &quot; warnings
- o 771255 :  &quot; Symbol name not found at the start of comment block &quot; warning with &quot; attributes &quot; annotation.
+ o 769341 : gtkdoc-mkdb line 3966 triggers "Negative repeat count does nothing" warnings
+ o 771255 : "Symbol name not found at the start of comment block" warning with "attributes" annotation.
  o 773151 : configure: Lower perl dependency to 5.16.0
  o 774168 : gobject introspection annotations and gtk-doc parser do not agree
  o 774812 : Error messages from xsltproc are hidden by gtkdoc-mkhtml
