--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,31 @@
+GTK-Doc 1.33.1  (Nov 17 2020)
+===============
+
+Build GObject scanner with asan
+Ignore deprecations in the GObject scanner
+autotools: Fix distclean support
+meson: Use lib/cmake
+Translation updates
+
+GTK-Doc 1.33.0  (Oct 1 2020)
+=============
+
+Support documenting GTK actions
+Recognize GDK_DECLARE_ macros
+Better table styling in html output
+Use plain C types for basic types
+Make builds more reproducible
+Translation updates
+
+GTK-Doc 1.32.1  (Aug 15 2019)
+===============
+
+Dev version
+
+This version does not generate object_index.sgml if the library contains no
+gobjects.
+
+
 GTK-Doc 1.32  (Aug 15 2019)
 ===============
 
