gtk-doc: Autospec creation for update from version 1.33.2 to version 1.34.0
Anders Jonsson (1):
      Update Swedish translation

Asier Sarasua Garmendia (3):
      Add Basque translation
      Update Basque translation
      Update Basque translation

Balázs Úr (1):
      Add Hungarian translation

Boyuan Yang (1):
      Update Chinese (China) translation

Daniel Mustieles (1):
      Updated Spanish translation

Kalev Lember (1):
      Partially revert a gtk-doc 1.31 change that broke e-d-s and NM builds

Mario Blättermann (1):
      Update German translation

Matthias Clasen (1):
      1.33.2

Patrick Griffis (1):
      gtkdoc-rebase: Fix log messages

Rafael Fontenelle (1):
      Update Brazilian Portuguese translation

Roman Bogorodskiy (1):
      fixxref: fix line wrapping for help messages

Ross Burton (1):
      gtkdocize: don't use docdir from environment

Sébastien Wilmet (40):
      doap: add myself as maintainer
      doap: update/improve the infos
      Add build/ dir as convenience when building the module with meson
      Remove MAINTAINERS file, there is already the *.doap file
      Remove bugzilla.py
      ChangeLog: replace content by a message to look at the NEWS file
      hacking: simplify releasing instructions
      ChangeLog: remove more stuff related to the ChangeLog
      ChangeLog: remove the help/manual/ChangeLog file
      readme: some updates and improvements
      hacking: some updates and simplifications
      doap: add comments for the different maintainers
      build: fix a new meson warning
      Add a .gitignore for __pycache__/ dirs
      readme: add 'Development and maintenance status' section
      doap: small update
      readme: add important messages
      readme: don't use personal statements in first-person
      readme: rephrase the section 'Development and maintenance status'
      readme: add reference links for the docbook-style-xsl bug
      meson: directly use meson.project_version() instead of a variable
      meso

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+GTK-Doc 1.34.0 (Mar 5 2024)
+==============
+
+Maintenance, some bug fixes
+Meson: fix some warnings, simplifications
+Translation updates
+
+GTK-Doc 1.33.2  (Jan 19 2021)
+===============
+
+Stop using anytree
+Python3 fixes for depscan
+
 GTK-Doc 1.33.1  (Nov 17 2020)
 ===============
 
